Update submodule branch for web-zip-bundle to master

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "extensions/web-zip-bundle"]
 	path = extensions/web-zip-bundle
 	url = https://github.com/BricL/CC3.WebZipBundle.git
-	branch = independent
+	branch = master
