--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
 [submodule "extensions/web-zip-bundle"]
 	path = extensions/web-zip-bundle
-	url = https://github.com/BricL/CC3.WebZipBundle.git
-	branch = master
+	url = https://github.com/BricL/CC3.WebZipBundle
